2002-11-08  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (fprof-analyse): Added new command to view
	an existing fprof analysis file.

2002-11-05  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl.el (erl-make-ref): Equivalent to make_ref/0 BIF in
	Erlang. Also added support for encoding/decoding refs "on the
	wire" (erlext.el).

	* elisp/erlext.el (erlext-read-obj): Bignums are now skipped over,
	giving the symbol SMALL-BIGNUM or LARGE-BIGNUM instead of an
	error.

2002-10-30  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-reload-module): Convenience function
	for reloading an Erlang module. I often see people switch from
	Emacs to an erlang shell to type "l(mymod)" after a 'make'. This
	is a quicker way.
	Bound to "C-c C-d L".

2002-10-23  Luke Gorrie  <luke@bluetail.com>

	* elisp/distel.el (report-distel-problem): New automated bug
	reporting command. Creates a bug report email template including
	some recent trace information.

2002-10-08  Luke Gorrie  <luke@bluetail.com>

	* distel.erl, elisp/edb.el (edb-toggle-interpret): Fixes for
	finding the right source code to interpret when debugging is
	toggled on (patch by Mats Cronqvist). Now we use the absolute path
	name of the Emacs buffer as the filename to interpret on the
	Erlang node. This essentially assumes a common file system between
	both nodes. The issue of "fully general" debugging on arbitrary
	remote nodes still needs some thinking (e.g. if node and Emacs
	have different versions of the code, etc.). But for now this is
	more convenient for debugging nodes that do have a common file
	system with Emacs.

2002-10-04  Luke Gorrie  <luke@bluetail.com>

	* erl/distel.erl, erl-service.el: Can now find the source file for
	a module from information in the beamfile saying where it was
	originally compiled.  Idea & patch by Mats Cronqvist
	<etxmacr@cbe.ericsson.se>.

2002-09-30  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-find-source): Doesn't do the